--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
+    "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.292.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
@@ -28,4 +35,4 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
-} 
+}
