--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-select": "^5.10.2",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
